--- a/mysite/templates/mysite/list.html
+++ b/mysite/templates/mysite/list.html
@@ -2,30 +2,97 @@
 
 {% block content %}
 
-<h1>Все фотографии</h1>
+<div>
+	
+</div>
+<div class="position-relative">
+	<h1>Все фотографии</h1>
+	
+	<form action="{% url 'home' %}" method="get" id="sortByDateOld">
+   		<input type="hidden" name="orderby" value="pub_date" />
+	</form>
+	<form action="{% url 'home' %}" method="get" id="sortByDateNew">
+    	<input type="hidden" name="orderby" value="-pub_date"/>
+	</form>
+	<form action="{% url 'home' %}" method="get" id="sortByVoices">
+    	<input type="hidden" name="orderby" value="voices"/>
+	</form>
+	<form action="{% url 'home' %}" method="get" id="sortByVoicesRev">
+    	<input type="hidden" name="orderby" value="-voices"/>
+	</form>
 
+		
+	  <button class="btn btn-secondary btn-sm dropdown-toggle position-absolute top-0 end-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+	    Отсортировать
+	  </button>
+	  <ul class="dropdown-menu">
+	    <li><a class="dropdown-item" href="#" onclick="document.getElementById('sortByDateOld').submit();">По дате (старые) </a></li>
+	    <li><a class="dropdown-item" href="#" onclick="document.getElementById('sortByDateNew').submit();">По дате (новые)</a></li>
+	    <li><a class="dropdown-item" href="#" onclick="document.getElementById('sortByVoices').submit();">По голосам (популярные)</a></li>
+	    <li><a class="dropdown-item" href="#" onclick="document.getElementById('sortByVoicesRev').submit();">По голосам (непопулярные)</a></li>
+	  </ul>
+	</div>
+</div>
+
+<section>
 <div class="container-fluid text-center">
 		<div class="row row-cols-4 gy-4">
 
-			{% for p in object_list %}
+			{% for p in posts %}
 
 			<div class="col">
 
-				<div class="card" style="width: 18rem;border-color: #ffffff;">
+				<div class="card" style="width: 18rem; border-color: #ffffff;">
+					<img src="{{p.image.url}}" class="card-img-top rounded" alt="...">
 
-					<p class="card-title">{{p.title}}<br/> <small> {{p.author}} </small></p>
+					<div class="card-body">
 
-					<p><img src="{{p.image.url}}" class="card-img-top rounded"></p>
+						<h5 class="card-title">{{p.title|capfirst}}</h5>
+				
 
-				 	<p class="card-text">{{p.description}} <br/> {{p.pub_date}} </p>
+						<p class="card-text m-0">{{p.description|capfirst}}</p>
 
-				 	<p>
-				 		<button type="button" class="btn btn-primary">
-				 			Проголосовать <span class="badge text-bg-secondary"> голоса</span>
-				 		</button>
+						<ul class="list-group list-group-flush">
+
+							<li class="list-group-item">
+								<p class="card-text"><small> {{p.author}} </small></p>
+							</li>
+
+							<li class="list-group-item">
+								<p class="card-text"><small>{{p.pub_date|date:"j.m.Y"}} {{p.pub_date|time:"H:i"}}</small></p>
+							</li>
+						
+						</ul>
+					</div>
+
+					<div class="card-body">
+    					<form action="" method="post" enctype="multipart/form-data">
+				 			{% csrf_token %}
+
+				 			<div>
+				 				<button type="button" class="btn btn-outline-light position-relative" style="background-color: #028E9B;">
+
+				 					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-square-heart" viewBox="0 0 16 16">
+				 						<path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-2.5a2 2 0 0 0-1.6.8L8 14.333 6.1 11.8a2 2 0 0 0-1.6-.8H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12ZM2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2Z"/>
+				 						<path d="M8 3.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
+				 					</svg>
+				 					<span class="badge text-bg-secondary-light position-absolute top-0 start-100 translate-middle badge rounded-pill bg-secondary">{{p.voices.all.count}}</span>
+				 				</button>
+
+				 				<button type="button" class="btn btn-outline-light position-relative" style="background-color: #028E9B;">
+
+				 					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-square-text" viewBox="0 0 16 16">
+				 						<path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-2.5a2 2 0 0 0-1.6.8L8 14.333 6.1 11.8a2 2 0 0 0-1.6-.8H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+				 						<path d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+				 					</svg>
+				 					<span class="badge text-bg-secondary-light position-absolute top-0 start-100 translate-middle badge rounded-pill bg-secondary">{{p.comments.all.count}}</span>
+				 				</button>
+
+				 			</div>
+	
+				 		</form>
 				 		
-				 	</p>
-
+  					</div>
 				</div>
 			</div>
 
@@ -34,5 +101,6 @@
 	
 			
 </div>
+</section>
 
 {% endblock %}
