--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 	<header>Фотоконкурс</header>
 	<main>
 
-<!--- Блока навигации !--->
+<!--- Блок навигации !--->
 
 		<nav class="navbar navbar-expand-lg" style="background-color: #028E9B;">
 
