--- a/photo_app/templates/photo_app/base.html
+++ b/photo_app/templates/photo_app/base.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Фотоконкурс</title>
+	<title>Заголовок 1</title>
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
@@ -25,7 +25,7 @@
 			 	<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
 			 		<li class="nav-item">
-			 			<a class="nav-link active text-light"  aria-current="page" href="#">Главная</a>
+			 			<a class="nav-link active text-light"  aria-current="page" href="/">Главная</a>
 			 		</li>
 		        	<li class="nav-item">
 		          		<a class="nav-link text-light" href="#">Недавно добавленные</a>
@@ -36,12 +36,12 @@
 
 <!--- Поиск по сайту !--->
 		        	<li class="nav-item">
-		        		 <form class="d-flex" role="search">
-		        		 	<input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
-		        		 	<button class="btn btn-outline-light" type="submit">Поиск</button>
-		      			</form>
+		        		<form class="d-flex" action="{% url 'home' %}" method="get" id="sortBySearch">
+		        		 	<input class="form-control me-2 " type="search" name="orderbysearch" placeholder="Поиск по фото" aria-label="Поиск"/>
+		        		 	<button class="btn btn-outline-light" type="submit"><a href="#" onclick="document.getElementById('sortByBySearch').submit();"></a>Поиск</button>
+		        		</form>
 
-		      		</li>
+		        	</li>
 		        </ul>
 
 <!--- Авторизация/регистрация !--->
@@ -56,7 +56,10 @@
     		</div>
 		</nav>
 	
-	
+{% block over_the_content%}
+{% endblock %}
+
+
 {% block content %}
 {% endblock %}
 <footer>
