Add active buttons in homepage

--- a/photo_app/templates/photo_app/base.html
+++ b/photo_app/templates/photo_app/base.html
@@ -28,10 +28,10 @@
 			 			<a class="nav-link active text-light"  aria-current="page" href="/">Главная</a>
 			 		</li>
 		        	<li class="nav-item">
-		          		<a class="nav-link text-light" href="#">Недавно добавленные</a>
+		          		<a class="nav-link text-light" href="#">Топ - 10</a>
 		        	</li>
 		        	<li class="nav-item">
-		          		<a class="nav-link text-light" href="#">Топ - 10</a>
+		          		<a class="nav-link text-light" href="upload">Добавить фото</a>
 		        	</li>
 
 <!--- Поиск по сайту !--->
