--- a/photo_app/templates/photo_app/list_of_photos.html
+++ b/photo_app/templates/photo_app/list_of_photos.html
@@ -37,7 +37,7 @@
 	    <li><a class="dropdown-item" href="#" onclick="document.getElementById('sortByDateNew').submit();">По дате (новые)</a></li>
 	    <li><a class="dropdown-item" href="#" onclick="document.getElementById('sortByVoices').submit();">По голосам (популярные)</a></li>
 	    <li><a class="dropdown-item" href="#" onclick="document.getElementById('sortByVoicesRev').submit();">По голосам (непопулярные)</a></li>
-	    <li><a class="dropdown-item" href="#" onclick="document.getElementById('sortByComments').submit();">По комментариям (непопулярные)</a></li>
+	    <li><a class="dropdown-item" href="#" onclick="document.getElementById('sortByComments').submit();">По комментариям (популярные)</a></li>
 	    <li><a class="dropdown-item" href="#" onclick="document.getElementById('sortByCommentsRev').submit();">По комментариям (непопулярные)</a></li>
 	  </ul>
 	</div>
