--- a/photo_app/templates/photo_app/base.html
+++ b/photo_app/templates/photo_app/base.html
@@ -14,7 +14,7 @@
 
 
 <body>
-	<header>Фотоконкурс</header>
+	
 	<main>
 
 <!--- Блок навигации !--->
@@ -63,7 +63,10 @@
 {% block content %}
 {% endblock %}
 <footer>
-	Подвал сайта
+	<div class="">
+		Подвал сайта
+	</div>
+	
 </footer>
 </main>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
