--- a/photo_app/templates/photo_app/base_list.html
+++ b/photo_app/templates/photo_app/base_list.html
@@ -4,67 +4,70 @@
 {% block content %}
 
 <section>
+
 <div class="container-fluid text-center">
-		<div class="row row-cols-4 gy-4">
+	<div class="row row-cols-4 gy-4">
+		{% for p in posts %}
 
-			{% for p in posts %}
+		<div class="col">
 
-			<div class="col">
+			<div class="card" style="width: 18rem; border-color: #E5E5E5;">
+				<img src="{{p.photo_small.url}}" class="card-img-top rounded" alt="..." title="{{p.description|capfirst}}">
 
-				<div class="card" style="width: 18rem; border-color: #ffffff;">
-					<img src="{{p.image.url}}" class="card-img-top rounded" alt="..." title="{{p.description|capfirst}}">
+				<div class="card-body">
 
-					<div class="card-body">
-
-						<h5 class="card-title"><a class="link-offset-2 link-underline link-underline-opacity-0 text-dark bg-white" href="photo/{{p.id}}">{{p.title|capfirst}}</a></h5>
+					<h5 class="card-title"><a class="link-offset-2 link-underline link-underline-opacity-0 text-dark bg-white" href="photo/{{p.id}}">{{p.title|capfirst}}</a></h5>
 				
 
-						<ul class="list-group list-group-flush">
-
-							<li class="list-group-item">
-								<p class="card-text"><small> {{p.author}} </small></p>
-							</li>
-
-							<li class="list-group-item">
-								<p class="card-text"><small>{{p.pub_date|date:"j.m.Y"}} {{p.pub_date|time:"H:i"}}</small></p>
-							</li>
-						
-						</ul>
-					</div>
-
-					<div class="card-body">
-    					<form action="" method="post" enctype="multipart/form-data">
-				 			{% csrf_token %}
-
-				 			<div>
-				 				<button type="button" class="btn btn-outline-light position-relative" style="background-color: #028E9B;">
-
-				 					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-square-heart" viewBox="0 0 16 16">
-				 						<path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-2.5a2 2 0 0 0-1.6.8L8 14.333 6.1 11.8a2 2 0 0 0-1.6-.8H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12ZM2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2Z"/>
-				 						<path d="M8 3.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
-				 					</svg>
-				 					<span class="badge text-bg-secondary-light position-absolute top-0 start-100 translate-middle badge rounded-pill bg-secondary">{{p.voices.all.count}}</span>
-				 				</button>
-
-				 				<button type="button" class="btn btn-outline-light position-relative" style="background-color: #028E9B;">
-
-				 					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-square-text" viewBox="0 0 16 16">
-				 						<path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-2.5a2 2 0 0 0-1.6.8L8 14.333 6.1 11.8a2 2 0 0 0-1.6-.8H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
-				 						<path d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
-				 					</svg>
-				 					<span class="badge text-bg-secondary-light position-absolute top-0 start-100 translate-middle badge rounded-pill bg-secondary">{{p.comments.all.count}}</span>
-				 				</button>
-
-				 			</div>
-	
-				 		</form>
-				 		
-  					</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item" style="border-color: #E5E5E5;">
+							<p class="card-text"><small> {{p.author}} </small></p>
+						</li>
+						<li class="list-group-item">
+							<p class="card-text"><small>{{p.pub_date|date:"j.m.Y"}} {{p.pub_date|time:"H:i"}}</small></p>
+						</li>
+					</ul>
 				</div>
-			</div>
 
-			{% endfor %}
+				<div class="card-body">
+					<form action="" method="post" enctype="multipart/form-data">
+						{% csrf_token %}
+						<div class="row g-0 justify-content-center">
+							<div class="col-6 col-md-4">
+								<button type="button" class="btn btn-outline-light" style="background-color: #028E9B;">
+									<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-square-heart" viewBox="0 0 16 16">
+										<path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-2.5a2 2 0 0 0-1.6.8L8 14.333 6.1 11.8a2 2 0 0 0-1.6-.8H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12ZM2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2Z"/>
+					 					<path d="M8 3.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
+					 				</svg>
+					 				<span class="badge text-light" style="background-color: #028E9B;">{{p.voices.all.count}}</span>
+				 				</button>
+	
+							</div>
+							<div class="col-6 col-md-4">
+								<button type="button" class="btn btn-outline-light" style="background-color: #028E9B;">
+
+						 			<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-square-text" viewBox="0 0 16 16">
+						 				<path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-2.5a2 2 0 0 0-1.6.8L8 14.333 6.1 11.8a2 2 0 0 0-1.6-.8H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+						 				<path d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+						 			</svg>
+						 			<span class="badge text-light" style="background-color: #028E9B;">{{p.comments.all.count}}</span>
+						 		</button>
+							</div>
+
+						</div>
+    				
+
+				 			 		
+	
+	
+				 	</form>
+				 		
+  				</div>
+			</div>
 		</div>
+
+		{% endfor %}
+	</div>
 	
 			
 </div>
