--- a/photo_app/templates/photo_app/base_list.html
+++ b/photo_app/templates/photo_app/base_list.html
@@ -7,9 +7,10 @@
 
 <div class="container-fluid text-center">
 	<div class="row row-cols-4 gy-4">
+		{% if not text %}
 		{% for p in posts %}
 
-		<div class="col">
+		<div class="col-md-3">
 
 			<div class="card" style="width: 18rem; border-color: #E5E5E5;">
 				<img src="{{p.photo_small.url}}" class="card-img-top rounded" alt="..." title="{{p.description|capfirst}}">
@@ -17,22 +18,24 @@
 				<div class="card-body">
 
 					<h5 class="card-title"><a class="link-offset-2 link-underline link-underline-opacity-0 text-dark bg-white" href="photo/{{p.id}}">{{p.title|capfirst}}</a></h5>
-				
 
 					<ul class="list-group list-group-flush">
 						<li class="list-group-item" style="border-color: #E5E5E5;">
+							{% if p.author %}
 							<p class="card-text"><small> {{p.author}} </small></p>
+							{% else %}
+							<p class="card-text"><small> Автор неизвестен </small></p>
+							{% endif %}
 						</li>
 						<li class="list-group-item">
 							<p class="card-text"><small>{{p.pub_date|date:"j.m.Y"}} {{p.pub_date|time:"H:i"}}</small></p>
 						</li>
 					</ul>
-				</div>
-
-				<div class="card-body">
+					<div class="card-body">
 					<form action="" method="post" enctype="multipart/form-data">
 						{% csrf_token %}
 						<div class="row g-0 justify-content-center">
+
 							<div class="col-6 col-md-4">
 								<button type="button" class="btn btn-outline-light" style="background-color: #028E9B;">
 									<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-square-heart" viewBox="0 0 16 16">
@@ -41,8 +44,8 @@
 					 				</svg>
 					 				<span class="badge text-light" style="background-color: #028E9B;">{{p.voices.all.count}}</span>
 				 				</button>
-	
 							</div>
+
 							<div class="col-6 col-md-4">
 								<button type="button" class="btn btn-outline-light" style="background-color: #028E9B;">
 
@@ -53,24 +56,47 @@
 						 			<span class="badge text-light" style="background-color: #028E9B;">{{p.comments.all.count}}</span>
 						 		</button>
 							</div>
-
 						</div>
-    				
-
-				 			 		
-	
-	
-				 	</form>
-				 		
+				 	</form>	
   				</div>
+				</div>
+
+				
 			</div>
 		</div>
 
 		{% endfor %}
+		{% endif %}
+
+		
 	</div>
 	
 			
 </div>
 </section>
 
+{% endblock %}
+
+{% block pagination %}
+{% if is_paginated %}
+<nav>
+  <ul class="pagination justify-content-center">
+  	{% if page_obj.has_previous %}
+    <li class="page-item"><a class="page-link text-light outline-light" href="{% url 'home' %}?page={{ page_obj.previous_page_number }}"style="background-color: #028E9B;">Предыдущая</a></li>
+    {% endif %}
+
+    {% for p in paginator.page_range %}
+    {% if page_obj.number == p %}
+    <li class="page-item disabled"><a class="page-link text-light outline-light" href="{% url 'home' %}?page={{ p }}" style="background-color: #028E9B;">{{p}}</a></li>
+    {% else %}
+    <li class="page-item"><a class="page-link text-light outline-light" href="{% url 'home' %}?page={{ p }}" style="background-color: #028E9B;">{{p}}</a></li>
+    {% endif %}
+    {% endfor %}
+
+    {% if page_obj.has_next %}
+    <li class="page-item"><a class="page-link text-light outline-light" href="{% url 'home' %}?page={{ page_obj.next_page_number }}" style="background-color: #028E9B;">Следующая</a></li>
+    {% endif %}
+  </ul>
+</nav>
+{% endif %}
 {% endblock %}
