--- a/photo_app/templates/photo_app/list_of_photos.html
+++ b/photo_app/templates/photo_app/list_of_photos.html
@@ -2,61 +2,44 @@
 
 {% block over_the_content %}
 
-<div>
-	
-</div>
-<div class="position-relative">
-	<h1>Заголовок страницы со списком фото</h1>
-	
-	<form action="{% url 'home' %}" method="get" id="sortByDateOld" class="formord">
-   		<input type="hidden" name="orderby" value="DateOld" />
-	</form>
-	<form action="{% url 'home' %}" method="get" id="sortByDateNew" class="formord">
-    	<input type="hidden" name="orderby" value="DateNew"/>
-	</form>
-	<form action="{% url 'home' %}" method="get" id="sortByVoices" class="formord">
-    	<input type="hidden" name="orderby" value="Voices"/>
-	</form>
-	<form action="{% url 'home' %}" method="get" id="sortByVoicesRev" class="formord">
-    	<input type="hidden" name="orderby" value="VoicesRev"/>
-	</form>
-	<form action="{% url 'home' %}" method="get" id="sortByComments" class="formord">
-    	<input type="hidden" name="orderby" value="Comments"/>
-	</form>
-	<form action="{% url 'home' %}" method="get" id="sortByCommentsRev" class="formord">
-    	<input type="hidden" name="orderby" value="CommentsRev"/>
-	</form>
-	
 
-		
-	<button class="btn btn-secondary btn-sm dropdown-toggle position-absolute top-0 end-0" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="background-color: #028E9B;">
-	    Отсортировать
-	</button>
-	<ul class="dropdown-menu">
-		<li><a class="dropdown-item" href="#" onclick="document.getElementById('sortByDateOld').submit();">По дате (старые) </a></li>
-	    <li><a class="dropdown-item" href="#" onclick="document.getElementById('sortByDateNew').submit();">По дате (новые)</a></li>
-	    <li><a class="dropdown-item" href="#" onclick="document.getElementById('sortByVoices').submit();">По голосам (популярные)</a></li>
-	    <li><a class="dropdown-item" href="#" onclick="document.getElementById('sortByVoicesRev').submit();">По голосам (непопулярные)</a></li>
-	    <li><a class="dropdown-item" href="#" onclick="document.getElementById('sortByComments').submit();">По комментариям (популярные)</a></li>
-	    <li><a class="dropdown-item" href="#" onclick="document.getElementById('sortByCommentsRev').submit();">По комментариям (непопулярные)</a></li>
-	</ul>
-	
+
+
+<div class="container-fluid">
+	<div class="d-flex justify-content-between">
+		<div class="p-6"><h1 class="">Галерея</h1></div>
+		<div class="p-3">
+			<form action="{% url 'home' %}" method="get" id="sortBy" name="orderby">
+		   		<select required class="btn btn-secondary btn-sm dropdown-toggle align-text-top" style="background-color: #028E9B;">
+				    <option value="DateOld">По дате (старые)</option>
+				    <option selected value="DateNew">По дате (новые)</option>
+				    <option value="Voices">По голосам (популярные)</option>
+				    <option value="VoicesRev">По голосам (непопулярные)</option>
+				    <option value="Comments">По комментариям (популярные)</option>
+				    <option value="CommentsRev">По комментариям (непопулярные)</option>
+				</select>
+			</form>
+			
+	   	
+	  </div>
+	</div>	
+
 </div>
+
 
 {% block javascript %}
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 <script>
-	$(document).ready(function () {
-		$("a.dropdown-item").click(function() {
+	$(document).ready(function(){
+		$("select").change(function(){
 			$.ajax({
-				url: '/list_of_photos.html',
+				url: '',
 				method: 'get',
-				dataType : 'html',
-				data: {orderby: 'DateOld'},
-				success: function (data) {
-					alert(data);
+			    dataType: 'json',
+			    success: function(data){
+						alert(data.text);
 				}
 			});
 		});
