--- a/photo_app/templates/photo_app/base.html
+++ b/photo_app/templates/photo_app/base.html
@@ -68,7 +68,7 @@
 
 </main>
 
-<footer class="container-fluid my-4">
+<footer class="mt-5">
 	<nav class="navbar navbar-expand-lg " style="background-color: #028E9B;">
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
